# dioxus_fft

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  README.md
assets/: tailwind.css
src/: guide_component.rs  main.rs
